# dask-iclx

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE.txt  MANIFEST.in  Makefile  README.md  pytest.ini  setup.cfg
.github/workflows/: build.yml  ci.yml  tests.yml
dask_iclx/: __init__.py  cluster.py  config.py  jobqueue-ic.yaml
tests/: __init__.py  conftest.py  test_cluster.py  test_config.py  test_integration.py
