[metadata]
name = dask_iclx
version = 0.5.0
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE.txt
author = Ben Jones, Tom Runting
author_email = b.jones@cern.ch, thomas.runting@cern.ch
url = https://github.com/runtingt/dask-iclx
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

    Topic :: System :: Distributed Computing

[options]
packages =
    dask_iclx
install_requires =
    click>=7.0
    click-didyoumean
    cryptography
    dask
    dask-jobqueue>=0.8.1
    humanize
    psutil
    pyyaml
    watchdog
    importlib-metadata>=1.0
python_requires = >=3.6
include_package_data = True

[options.package_data]
* =
    *.sh
    *.yaml

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov>=3.0
    coverage[toml]>=6.0
    pytest-html
    pytest-xdist
    pyfakefs
    pytest-md-report
